# AnnotaPipeline

./: dockerfile  pyproject.toml
Scripts/: AnnotaPipeline.py  blastp_parser.py
config/: AnnotaPipeline.yaml  config_example.yaml
